# BackgammonGameCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Base64.cpp  Base64.h  ByteContainer.cpp  ByteContainer.h  Controller.cpp  Controller.h  DefineConsts.h  Utility.cpp  Utility.h  ViewHandeler.cpp  ViewHandeler.h  ViewModel.cpp  ViewModel.h  main.cpp  viewHandeler.cpp
src/configs/: GameConfigs.h  MenuConfigs.h  UIConfigs.h
src/controller/: InputControll.cpp  InputControll.h
src/model/: Board.cpp  Board.h  History.cpp  History.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  SerializeToFile.cpp  SerializeToFile.h  Storage.cpp  Storage.h
src/view/: Drawing.cpp  Drawing.h  Handeler.cpp  Handeler.h
src/viewModel/: InputControll.cpp  InputControll.h  Menu.cpp  Menu.h  Space.cpp  Space.h  UserInterface.cpp  UserInterface.h
